// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render App with gb locale correctly 1`] = `
<div
  className="font-regular font-non-jp"
>
  <BackToTopButton />
  <Header />
  <MenuMain />
  <Connect(AboutMain) />
  <LanguagesMain />
  <PortfolioMain />
  <FooterMain />
</div>
`;

exports[`should render App with jp locale correctly 1`] = `
<div
  className="font-regular font-jp"
>
  <BackToTopButton />
  <Header />
  <MenuMain />
  <Connect(AboutMain) />
  <LanguagesMain />
  <PortfolioMain />
  <FooterMain />
</div>
`;
